	client/gtk/name.c, client/gtk/frontend.h, client/gtk/player.c,
	client/gtk/quote.c, client/gtk/chat.c, client/gtk/offline.c,
	client/gtk/gui.c, client/gtk/identity.c, client/gtk/connect.c,
	client/common/client.c, client/common/client.h,
	client/common/callback.c, client/common/player.c,
	client/help/C/pioneers.xml, client/ai/ai.c, client/ai/lobbybot.c:
	Change 'viewer' to 'spectator'.

2011-06-05  Roland Clobus <rclobus@rclobus.nl>
	* configure.ac, client/callback.h, client/gtk/callbacks.c,
	client/gtk/name.c, client/gtk/frontend.h, client/gtk/offline.c,
	client/gtk/Makefile.am, client/gtk/connect.c, client/common/client.c,
	client/common/client.h, client/common/callback.c, client/ai/ai.h,
	client/ai/greedy.c, client/ai/Makefile.am, client/ai/ai.c,
	client/ai/lobbybot.c: Use NotifyingString as the only place to store
	the name and style of the player. Fix a race condition in connect.c
	which whould result in a crash when the dialog was shown after a failed
	connection. To be able to use NotifyingString, the initialisation of
	glib is split from the other init functions.
	* editor/gtk/editor.c: Fix compiler warning

2011-06-04  Roland Clobus <rclobus@rclobus.nl>
	* common/gtk/guimap.c, common/gtk/guimap.h, common/map.c, common/map.h:
	Replace detection of the location of the cursor on the map with
	GdkRegion by mathematics.

2011-05-31  Roland Clobus <rclobus@rclobus.nl>
	* common/gtk/gtkcompat.h, configure.ac, client/gtk/gui.c,
	client/gtk/connect.c: Restore compatibility with Debian Stable.

2011-05-20  Roland Clobus <rclobus@rclobus.nl>
	* common/gtk/guimap.c: Prefer bridge over settlement.

2011-05-14  Roland Clobus <rclobus@rclobus.nl>
	* common/gtk/guimap.c, common/gtk/guimap.h, common/gtk/polygon.c,
	common/gtk/polygon.h, client/gtk/identity.c: Use cairo in guimap.c

2011-05-04  Roland Clobus <rclobus@rclobus.nl>
	* editor/gtk/editor.c: Upgrade to GTK 2.24

2011-05-03  Roland Clobus <rclobus@rclobus.nl>